# opabackend

./: .env.example  .gitignore  =2.10  DOJAH_KYC.md  HOST_API_CHANGES_APRIL_2026.md  HOST_APP_PAYSTACK.md  HOST_APP_SUBSCRIPTION.md  KUVARPAY_UI_IMPLEMENTATION.md  PAYSTACK_MOBILE_GUIDE.md  README.md  SECONDARY_CONTACT_UI.md  car_rental.db.backup  main.py  migrate.py  passenger_wsgi.py  profile.md  pyproject.toml  ratings-api.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy-staging.yml  deploy.yml
app/: auth.py  cache_utils.py  config.py  database.py  main.py  models.py  schemas.py  storage.py
app/admin/: README.md  TODO.md  admins.py  auth.py  bookings.py  cars.py  dashboard.py  feedback.py  notifications.py  payment_methods.py  refunds.py  subscribers.py  support.py  users.py  withdrawals.py
app/api/: deps.py
app/cache/: redis.py
app/core/: config.py  logging.py  middleware.py  security.py
app/db/: __init__.py  init_db.py  session.py
app/migrations/: m001_paystack.py  m002_clear_stale_push_tokens.py  m003_fix_card_enum_case.py  m004_dojah_kyc.py  m005_perf_indexes.py  m006_normalize_payment_method_type_case.py  m007_schema_patches.py  m008_free_trial.py  m009_host_sub_paystack.py  m010_client_storage_uuid.py  m011_client_support.py  m012_secondary_contact.py  m013_secondary_contact_otp.py  runner.py
app/models/: __init__.py
app/routers/: agreements.py  bookings.py  car_ratings.py  cars.py  client_auth.py  client_emergency.py  client_kyc.py  client_ratings.py  client_refunds.py  feedback.py  (+19 more)
scripts/: ngrok.bat  ngrok.sh
(+63 files in other folders)
