[project]
name = "opabackend"
version = "0.1.0"
description = "The backend system for opabackend"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.1.2",
    "fastapi==0.104.1",
    "gunicorn>=23.0.0",
    "fastapi-cache2[redis]>=0.2.2",
    "google-auth==2.23.4",
    "httpx>=0.24.0,<0.26.0",
    "mangum>=0.21.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "redis>=4.2.0rc1,<5.0.0",
    "reportlab>=4.0.0",
    "requests==2.31.0",
    "sendgrid>=6.11.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.23",
    "starlette>=0.27.0",
    "stellar-sdk>=11.0.0",
    "supabase>=2.3.4,<2.5.0",
    "ujson>=5.9.0",
    "uvicorn[standard]==0.24.0",
]